design updates and edits

--- a/app/views/psd-revised-flow/case-closing-journey-01.html
+++ b/app/views/psd-revised-flow/case-closing-journey-01.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <p class="govuk-body">
-                        Either add a product record to the case or delete the case. 
+                        Either add an active product record to the case or delete the case. 
                     </p>
 
 
