--- a/app/views/psd-revised-flow/contact-prod-owner.html
+++ b/app/views/psd-revised-flow/contact-prod-owner.html
@@ -22,7 +22,7 @@
         </h1>
 
         <p class="govuk-body-s opss-secondary-text govuk-!-margin-bottom-8">
-            You can contact the product record owner with editorial requests, amendments, or additional information or general enquiries.
+            You can contact the current product record owner with editorial requests, amendments, or additional information or general enquiries.
         </p>
         
         <dl class="govuk-summary-list">
@@ -42,14 +42,14 @@
                 Sunderland Trading Standards Service
                 </dd>
             </div>
-            <div class="govuk-summary-list__row">
+            <!--div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                 Record created by
                 </dt>
                 <dd class="govuk-summary-list__value">
                 Sarah Smith
                 </dd>
-            </div>
+            </div-->
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                 Address
