--- a/app/views/psd-revised-flow/product-created-confirmation.html
+++ b/app/views/psd-revised-flow/product-created-confirmation.html
@@ -23,21 +23,25 @@
 
         <!--p class="govuk-body">The product record will now appear in <a href="[go to: Your products]]" class="govuk-link govuk-link--no-visited-state">your products list</a>.</p-->
 
-        <p class="govuk-body">The product record will now appear in search results for <a href="[go to: All products - search page]]" class="govuk-link govuk-link--no-visited-state">all products</a>.</p>        
+        <p class="govuk-body">The product record will now appear in search results for <a href="[[go to: All products - search page]]" class="govuk-link govuk-link--no-visited-state">all products</a>.</p>        
 
         <div class="govuk-inset-text">
             <span class="govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-margin-bottom-4">
-                It has not been added to a case<span class="govuk-visually-hidden">.</span>
+                You can create a case for this product<span class="govuk-visually-hidden">.</span>
             </span>
             
             <span class="govuk-!-display-inline-block govuk-!-margin-bottom-4">
-                By using the <abbr>PSD</abbr> reference number you can now add this product record to your case.
+                You create a case for a product directly from its product record page.
             </span>
 
             <span class="govuk-!-display-inline-block">
-                You add a product record to your case directly from the case page.
+                On the <a href="[goes directly to the product record]" class="govuk-link govuk-link--no-visited-state">product record page</a> select 'Create a new case for this product'.
             </span>
         </div>
+
+        <p class="govuk-body-s">
+            By using the <abbr>PSD</abbr> reference number you can also add this product record to pre-existing cases. You add a product record to a case directly from the case page.
+        </p>
 
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
