--- a/app/views/psd-revised-flow/product-page-no-owner.html
+++ b/app/views/psd-revised-flow/product-page-no-owner.html
@@ -69,20 +69,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#accordion-attachments" class="govuk-link govuk-link--no-visited-state">
-                            Attachments <span>(4)</span>
-                        </a>
-                    </li>  
-                    <li>
                         <a href="#accordion-default-heading-3" class="govuk-link govuk-link--no-visited-state">
                             <span class="govuk-visually-hidden">Related</span> Cases <span>(2)</span>
                         </a>
                     </li> 
-                    <li>
-                        <a href="#accordion-default-heading-4" class="govuk-link govuk-link--no-visited-state">
-                            Activity
-                        </a>
-                    </li>                                                            
                 </ul>
             </li>
         </ul>        
@@ -322,20 +312,7 @@
 
               </div>
             </div>
-            <div class="govuk-accordion__section">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-attachments">
-                    Attachments <span class="govuk-!-font-weight-regular govuk-!-font-size-19">(4)</span>
-                  </span>
-                </h2>
-              </div>
-              <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-attachments">
-
-                {% include "psd-revised-flow/inc_products_pg_attachments.html" %}
-
-              </div>
-            </div>
+            
             <div class="govuk-accordion__section">
               <div class="govuk-accordion__section-header">
                 <h2 class="govuk-accordion__section-heading">
@@ -348,7 +325,7 @@
 
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        <p class='govuk-body opss-secondary-text'>This product record is included in 2 cases.</p><!--Show list with newest cases first-->
+                        <p class='govuk-body opss-secondary-text'>This product record has been added to 2 cases.</p><!--Show list with newest cases first-->
 
                     </div>
                     <!--div class="govuk-grid-column-one-third">
@@ -362,21 +339,7 @@
 
               </div>
             </div>
-            <div class="govuk-accordion__section ">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
-                    Activity
-                  </span>
-                </h2>
-              </div>
-              <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
-                <p class='govuk-body opss-secondary-text'>This activity audit trail shows the history of this product record.</p>
-
-                {% include "psd-revised-flow/inc_products_pg_activity.html" %}
-
-              </div>
-            </div>
+            
           </div>
           
 
