--- a/app/views/psd-revised-flow/product-page-owned-by-others.html
+++ b/app/views/psd-revised-flow/product-page-owned-by-others.html
@@ -71,20 +71,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#accordion-documents" class="govuk-link govuk-link--no-visited-state">
-                            Documents <span>(2)</span>
-                        </a>
-                    </li>  
-                    <li>
                         <a href="#accordion-default-heading-3" class="govuk-link govuk-link--no-visited-state">
                             <span class="govuk-visually-hidden">Related</span> Cases <span>(2)</span>
                         </a>
                     </li> 
-                    <li>
-                        <a href="#accordion-default-heading-4" class="govuk-link govuk-link--no-visited-state">
-                            Activity
-                        </a>
-                    </li>                                                            
                 </ul>
             </li>
         </ul>        
@@ -117,7 +107,7 @@
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">Product record owner</dt>
                         <dd class="govuk-summary-list__value">
-                            <a href="contact-prod-owner" class="govuk-link govuk-link--no-visited-state">Cardiff trading standards service</a>
+                            <a href="contact-prod-owner" class="govuk-link govuk-link--no-visited-state">Cardiff trading standards service</a> <!--br><span class="govuk-!-font-size-14">(You can still add this record to your case)</span-->
                         </dd>
                     </div>
                 </dl>  
@@ -325,34 +315,7 @@
 
               </div>
             </div>
-            <div class="govuk-accordion__section">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-documents">
-                    Documents <span class="govuk-!-font-weight-regular govuk-!-font-size-19">(2)</span>
-                  </span>
-                </h2>
-              </div>
-              <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-documents">
 
-
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                        <p class="govuk-body opss-secondary-text">There are 2 documents added to this product record.</p>
-                    </div>
-                    <!--div class="govuk-grid-column-one-third">
-                        <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                                Add a document
-                            </a>
-                        </div>
-                    </div-->                    
-                </div>
-
-                {% include "psd-revised-flow/inc_products_pg_attachments.html" %}
-
-              </div>
-            </div>
             <div class="govuk-accordion__section">
               <div class="govuk-accordion__section-header">
                 <h2 class="govuk-accordion__section-heading">
@@ -365,7 +328,7 @@
 
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        <p class='govuk-body opss-secondary-text'>This product record is included in 2 cases.</p><!--Show list with newest cases first-->
+                        <p class='govuk-body opss-secondary-text'>This product record has been added to 2 cases.</p><!--Show list with newest cases first-->
 
                     </div>
                     <!--div class="govuk-grid-column-one-third">
@@ -379,24 +342,10 @@
 
               </div>
             </div>
-            <div class="govuk-accordion__section ">
-              <div class="govuk-accordion__section-header">
-                <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
-                    Activity
-                  </span>
-                </h2>
-              </div>
-              <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
-                <p class='govuk-body opss-secondary-text'>This activity audit trail shows the history of this product record.</p>
 
-                {% include "psd-revised-flow/inc_products_pg_activity.html" %}
-
-              </div>
-            </div>
           </div>
 
-          <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">This product record is owned by Cardiff Trading Standards Service<span class="opss-hidden-desktop">.</span><br class="opss-br-desktop"> You can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the product record owner</a> with editorial requests or general enquiries<span class="opss-hidden-desktop">.</span></p>          
+          <p class="govuk-!-font-size-14 govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">This product record is currently owned by Cardiff Trading Standards Service<span class="opss-hidden-desktop">.</span> <br class="opss-br-desktop">You can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state opss-no-wrap-desktop">contact the product record owner</a> with editorial requests or general enquiries<span class="opss-hidden-desktop">.</span> <br class="opss-br-desktop">You can still add this product record to your case<span class="opss-hidden-desktop">.</span></p>          
 
 
     </section>
