--- a/app/views/psd-revised-flow/inc_products_pg_cases.html
+++ b/app/views/psd-revised-flow/inc_products_pg_cases.html
@@ -1,7 +1,7 @@
                 <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--sm-font opss-summary-list-mixed--4-cols">
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <a class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-regular" href="/psd-revised-flow/case-trading-stds-landing">
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing">
                             Lorem ipsum epttisucios 
                         </a>
                     </dt>
@@ -17,8 +17,8 @@
                     </div>
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        <a class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-regular" href="/psd-revised-flow/case-trading-stds-landing">
-                            Puttasous vetti cordoriu aldjkf lfj lsdfj lsfjfldkj
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing">
+                            Puttasous vetti cordoriu 
                         </a>
                     </dt>
                     <dd class="govuk-summary-list__value">
