--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -135,11 +135,6 @@
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#documents-tab-2">
-                      Documents <span class="govuk-!-font-size-16">(1)</span>
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#cases-tab-2">
                       Cases <span class="govuk-!-font-size-16">(2)</span>
                     </a>
@@ -317,22 +312,12 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-2">
-                    <h4 class="govuk-heading-m">Product documents</h4>
 
-                    <p class="govuk-body-s opss-secondary-text">There are 1 documents added to this product record. <br class="opss-br-desktop">These are product documents - they <strong>are not</strong> case evidence documents.
-                    </p>
-
-                    {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
-
-                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove documents for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page <span class="govuk-visually-hidden">to access its documents</span></a>
-                    </p>                  
-              
-                </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-2">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these 4 cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">
+                        This product record has also been added to these 4 cases.
+                    </p>
 
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
@@ -409,11 +394,6 @@
                     <li class="govuk-tabs__list-item">
                       <a class="govuk-tabs__tab" href="#images-tab-1">
                         Images <span class="govuk-!-font-size-16">(3)</span>
-                      </a>
-                    </li>
-                    <li class="govuk-tabs__list-item">
-                      <a class="govuk-tabs__tab" href="#documents-tab-1">
-                        Documents <span class="govuk-!-font-size-16">(2)</span>
                       </a>
                     </li>
                     <li class="govuk-tabs__list-item">
@@ -611,23 +591,10 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-1">
-                    <h4 class="govuk-heading-m">Product documents</h4>
-
-                    <p class="govuk-body-s opss-secondary-text">There are 2 documents added to this product record. <br class="opss-br-desktop">These are product documents - they <strong>are not</strong> case evidence documents.
-                    </p>
-
-                    {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
-
-                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        You cannot edit these documents, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its documents</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
-                    </p>                  
-              
-                </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
                     
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these 4 cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record has also been added to these 4 cases.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
               
@@ -705,11 +672,6 @@
                   <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#images-tab-3">
                       Images <span class="govuk-!-font-size-16">(1)</span>
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#documents-tab-3">
-                      Documents <span class="govuk-!-font-size-16">(0)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
@@ -895,22 +857,9 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-3">
-                    <h4 class="govuk-heading-m">Product documents</h4>
-
-                    <p class="govuk-body-s opss-secondary-text">There are 0 documents added to this product record. <br class="opss-br-desktop">These are product documents - they <strong>are not</strong> case evidence documents.
-                    </p>
-
-                    
-
-                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove documents for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-526</span> product record page <span class="govuk-visually-hidden">to access its documents</span></a>
-                    </p>                  
-              
-                </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-3">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these 4 cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record has also been added to these 4 cases.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
