--- a/app/views/psd-revised-flow/inc_products_pg_content_safe.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_safe.html
@@ -142,11 +142,6 @@
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#documents-tab-1">
-                      Documents <span class="govuk-!-font-size-16">(2)</span>
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#cases-tab-1">
                       Cases <span class="govuk-!-font-size-16">(4)</span>
                     </a>
@@ -340,22 +335,9 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-1">
-                    <h4 class="govuk-heading-m">Product documents</h4>
-
-                    <p class="govuk-body-s opss-secondary-text">There are 2 documents added to this product record. <br class="opss-br-desktop">These are product documents - they <strong>are not</strong> case evidence documents.
-                    </p>
-
-                    {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
-
-                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove documents for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page <span class="govuk-visually-hidden">to access its documents</span></a>
-                    </p>                  
-              
-                </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these 4 cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record has also been added to these 4 cases.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
