--- a/app/views/psd-revised-flow/inc_products_pg_content_yorkshire-owner.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_yorkshire-owner.html
@@ -139,11 +139,6 @@
                       </a>
                     </li>
                     <li class="govuk-tabs__list-item">
-                      <a class="govuk-tabs__tab" href="#documents-tab-1">
-                        Documents <span class="govuk-!-font-size-16">(2)</span>
-                      </a>
-                    </li>
-                    <li class="govuk-tabs__list-item">
                       <a class="govuk-tabs__tab" href="#cases-tab-1">
                         Cases <span class="govuk-!-font-size-16">(4)</span>
                       </a>
@@ -335,20 +330,10 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-1">
-                    <h4 class="govuk-heading-m">Product documents</h4>
-
-                    {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
-
-                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        You cannot edit these documents, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its documents</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
-                    </p>                  
-              
-                </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
                     
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record is also included in these 4 cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">This product record has also been added to these 4 cases.</p>
                     
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
