help page updates

--- a/app/views/cosmetics-clone/what-is-the-name-2_alt.html
+++ b/app/views/cosmetics-clone/what-is-the-name-2_alt.html
@@ -37,7 +37,7 @@
           The new draft notification will be a copy of the 'Vestibulum eyedrops' notification, ready for you to edit
         </li>
         <li>
-          If the 'Vestibulum eyedrops' notification provided ingredient information via a <abbr title="Portable Document Format">PDF</abbr>, you will need to add this information to the new draft notification
+          If the 'Vestibulum eyedrops' notification provided ingredient information via a <abbr title="Portable Document Format">PDF</abbr> file, you will need to add this information to the new draft notification
         </li>
         <!--li>
           The new draft will be available to edit in your cosmetic products page (in the drafts section)
