updates for psd

--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -22,7 +22,7 @@
         </h1>
 
 
-            <p class="govuk-body-l govuk-!-margin-top-7 govuk-!-margin-bottom-7">
+            <p class="govuk-body-l govuk-!-margin-top-7 govuk-!-margin-bottom-6">
                 How a case is created has changed - you now create a case from a product record.
             </p>        
 
@@ -39,7 +39,7 @@
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
 
                 <li>
-                    <span class="govuk-!-font-weight-bold">Find a product</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;by searching the product records</span>
+                    <span class="govuk-!-font-weight-bold">Find a product</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;by searching the <a href="[prod search - all pg]" class="govuk-link govuk-link--no-visited-state">product records</a></span>
                 </li>
                 <li><span class="govuk-!-font-weight-bold">Create a new case for that product</span>
 
@@ -98,7 +98,7 @@
         <p class="govuk-body">
             A case records case specific information about an unsafe, or non-compliant, product. 
             
-            Case specific information might include the business address for the importer of the product or risk assessments about the product. 
+            For example, case specific information might include the business address for the importer of the product or risk assessments about the product. 
         </p>
         
         <p class="govuk-body">
