create a case links updates

--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -201,7 +201,13 @@
             </li>              
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-case-specific-x2-1-new.html" target="_blank">Case page - case specific information</a> 2x products with no values
-            </li>            
+            </li>   
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/your-cases" target="_blank">Your cases - create a case</a> create a case, link example
+            </li>  
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/redirect-user" target="_blank">Create a case</a> the redirect advice page
+            </li>                                   
 
         </ol>
         
