--- a/app/views/psd-revised-flow/redirect-user.html
+++ b/app/views/psd-revised-flow/redirect-user.html
@@ -45,7 +45,7 @@
                                       Select a product record to view the product record page 
                                     </li>
                                     <li>
-                                      Select the '<span class="govuk-!-font-weight-bold">Create a new case for this product</span>' option <br class="opss-br-desktop"><span class="govuk-!-font-size-16">(in the top-right of a product record page)</span>
+                                      Select the '<span class="govuk-!-font-weight-bold">Create a new case for this product</span>' option 
                                     </li>
                                   </ol>    
               
