--- a/app/views/psd-revised-flow/redirect-user.html
+++ b/app/views/psd-revised-flow/redirect-user.html
@@ -50,7 +50,7 @@
                                   </ol>    
               
                                   <p class="govuk-body">
-                                      When you have finished creating the case, the product will automatically be included.
+                                      When you have finished creating the case, the product record will automatically be included.
                                   </p>  
                                   
                                   <p class="govuk-body">
