--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -156,6 +156,38 @@
     }
 }
 
+.opss-grey-record {
+    position: relative; 
+    top: -1px; 
+
+    & + .opss-grey-record {
+        top: -2px; 
+    }
+
+    tr:first-child th {
+        border-top: 1px dashed govuk-colour("mid-grey") !important; 
+        background-color: govuk-colour("light-grey") !important; /* #f7f9fa*/
+
+
+        a {
+            padding-right: govuk-spacing(2); 
+            color: $govuk-focus-text-colour;
+        }
+    }
+    tr:last-child td {
+        border-bottom: 1px dashed govuk-colour("mid-grey") !important; 
+        background-color: govuk-colour("light-grey") !important; 
+     
+    }
+
+    tr th, 
+    tr + tr td:first-of-type {
+        padding-left: govuk-spacing(2);
+    }
+    tr + tr td:last-of-type {
+        padding-right: govuk-spacing(2);
+    }
+}
 
 ul.opss-radio-list {
     margin-bottom: 0;
